Improve security for production deployment
- Remove console.log/error statements from frontend
- Add React ErrorBoundary for graceful error handling
- Add security headers to nginx (X-Frame-Options, X-Content-Type-Options, etc.)
- Tighten CORS to specific allowed headers instead of wildcard
- Add SameSite=Lax cookie attribute for CSRF protection
- Remove JWT from URL redirect, use cookie-only auth
- Remove localStorage token storage, use HTTP-only cookies exclusively
- Update API client to use withCredentials for cookie-based auth